<resources>
    <string name="app_name">FirstApplication</string>
    <string name="number1">数値1</string>
    <string name="number1_hint">数値1はココ</string>
    <string name="number2">数値2</string>
    <string name="number2_hint">数値2はココ</string>
    <string name="add">和を求める</string>
    <string name="subtract">差を求める</string>
    <string name="multiply">積を求める</string>
    <string name="divide">商を求める</string>
    <string name="power">累乗を求める</string>
    <string name="blank" />
</resources>